--- a/src/app/asignatura/asignatura.component.html
+++ b/src/app/asignatura/asignatura.component.html
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <th scope="col">Asignatura</th>
-                <th scope="col">Siglas</th>
+                <th scope="col">Sigla</th>
                 <th scope="col">Profesor</th>
             </tr>
         </thead>
