--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,14 +3,13 @@
 
     <header class="p-3 text-bg-dark">
         <div class="container">
-
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">        
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="" class="nav-link px-2 text-white">Preguntas</a></li>
-                    <li><a href="asignatura" class="nav-link px-2 text-white">Asignatura</a></li>
-
-                </ul>
+            <div class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom">
+                <h1 class="text-white">PABLO MARQUINEZ JIMENEZ</h1>
             </div>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2 text-white">Preguntas</a></li>
+                <li><a href="asignatura" class="nav-link px-2 text-white">Asignatura</a></li>
+            </ul>
         </div>
     </header>
 </main>
